Migrate to Java 8 (use guava collections)